# RustDockerApp

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  main.rs
static/: index.html
