[package]
name = "healthcheck-server"
version = "0.1.0"
edition = "2021"
description = "A healthcheck server"

[[bin]]
name = "HealthCheckServer"
path = "main.rs"

[dependencies]
actix-web = "4.0.0-beta.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.4", features = ["v4", "serde"] }
actix-files = "0.6"